objects/ssot__CourseOfferingParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicTermEnrollmentId__c</fullName>
        <label>Academic Term Enrollment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CourseOfferingId__c</fullName>
        <label>Course Offering</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DroppedDateTime__c</fullName>
        <label>Dropped Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Course Offering Participant Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsRepeatAttempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Repeat Attempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantAccountId__c</fullName>
        <label>Participant Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantAffiliation__c</fullName>
        <label>Participant Affiliation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantContactId__c</fullName>
        <label>Participant Contact</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipationStatus__c</fullName>
        <label>Participation Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegistrationDateTime__c</fullName>
        <label>Registration Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SummaryText__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817650868_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CourseOfferingParticipant_AcademicTe_rel</label>
        <referenceTo>ssot__AcademicTermEnrollment__dlm</referenceTo>
        <relationshipLabel>CourseOfferingParticipant_AcademicTe_rel</relationshipLabel>
        <relationshipName>rel_1719817650868_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817763151_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CourseOfferingParticipant_Participan_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>CourseOfferingParticipant_Participan_rel</relationshipLabel>
        <relationshipName>rel_1719817763151_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819729430_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CourseOfferingParticipant_CourseOffe_rel</label>
        <referenceTo>ssot__CourseOffering__dlm</referenceTo>
        <relationshipLabel>CourseOfferingParticipant_CourseOffe_rel</relationshipLabel>
        <relationshipName>rel_1719819729430_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>